--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <java-version>1.8</java-version>
         <mitreid-version>1.2.0-SNAPSHOT</mitreid-version>
+        <spring.security.version>3.2.5.RELEASE</spring.security.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
