--- a/wisvch-connect/pom.xml
+++ b/wisvch-connect/pom.xml
@@ -35,6 +35,16 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-wisvch-maven</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/wisvch/maven</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.mitre</groupId>
@@ -46,6 +56,21 @@
             <groupId>org.mitre</groupId>
             <artifactId>openid-connect-common</artifactId>
             <version>${mitreid-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.extensions</groupId>
+            <artifactId>spring-security-saml2-core</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.wisv</groupId>
+            <artifactId>dienst2-api-client-java</artifactId>
+            <version>0.0.3</version>
         </dependency>
     </dependencies>
 </project>
