--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
     <properties>
         <java-version>1.8</java-version>
         <mitreid-version>1.2.0-SNAPSHOT</mitreid-version>
+        <org.springframework-version>4.1.1.RELEASE</org.springframework-version>
         <spring.security.version>3.2.5.RELEASE</spring.security.version>
+        <jackson.version>2.3.4</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
