--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -1,8 +1,10 @@
+server.issuer=http://localhost:8080/
+server.force_https=false
+
 saml.entity_id=marksamltest
 saml.entity_baseurl=http://localhost:8080
 saml.idp_url=http://photon-01.chnet:8090/simplesaml/saml2/idp/metadata.php
 saml.idp_entity_id=http://photon-01.chnet:8090/simplesaml/saml2/idp/metadata.php
-
 saml.keystore=classpath:samlKeystore.jks
 saml.keyname=apollo
 saml.keypass=nalle123
