--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -1,6 +1,8 @@
 server.issuer=http://localhost:8080/
 server.force_https=false
 
+crypto.keystore=classpath:keystore.jwks
+
 saml.entity_id=marksamltest
 saml.entity_baseurl=http://localhost:8080
 saml.idp_url=http://photon-01.chnet:8090/simplesaml/saml2/idp/metadata.php
