--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,18 @@
     <groupId>ch.wisv</groupId>
     <artifactId>wisvch-connect-overlay</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <name>wisvch-connect-overlay</name>
 
     <modules>
-        <module>OpenID-Connect-Java-Spring-Server</module>
         <module>wisvch-connect</module>
     </modules>
 
     <properties>
         <java-version>1.8</java-version>
-        <mitreid-version>1.2.0-SNAPSHOT</mitreid-version>
-        <org.springframework-version>4.1.1.RELEASE</org.springframework-version>
-        <spring.security.version>3.2.5.RELEASE</spring.security.version>
+        <mitreid-version>1.2.0</mitreid-version>
+        <org.springframework-version>4.1.7.RELEASE</org.springframework-version>
+        <spring.security.version>3.2.7.RELEASE</spring.security.version>
         <jackson.version>2.3.4</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
