--- a/wisvch-connect/pom.xml
+++ b/wisvch-connect/pom.xml
@@ -86,6 +86,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+        <dependency>
             <groupId>ch.wisv</groupId>
             <artifactId>dienst2-api-client-java</artifactId>
             <version>0.0.5</version>
@@ -104,13 +109,13 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>2.3.8</version>
+            <version>2.4.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4-1201-jdbc41</version>
+            <version>9.4-1202-jdbc41</version>
         </dependency>
     </dependencies>
 </project>
