--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,19 @@
 
     <properties>
         <java-version>1.8</java-version>
-        <mitreid-version>1.2.1</mitreid-version>
-        <org.springframework-version>4.1.7.RELEASE</org.springframework-version>
-        <spring.security.version>3.2.8.RELEASE</spring.security.version>
         <jackson.version>2.3.4</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mitre</groupId>
+                <artifactId>openid-connect-parent</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>1.2.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
