--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.wisv</groupId>
-    <artifactId>wisvch-connect-overlay</artifactId>
+    <artifactId>wisvch-connect-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.2.0</version>
-    <name>wisvch-connect-overlay</name>
+    <version>1.2.2.1-SNAPSHOT</version>
+    <name>wisvch-connect-parent</name>
 
     <modules>
-        <module>wisvch-connect</module>
+        <module>wisvch-connect-overlay</module>
+        <module>wisvch-connect-common</module>
     </modules>
 
     <properties>
@@ -16,6 +17,37 @@
         <jackson.version>2.3.4</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <scm>
+        <connection>scm:git:https://github.com/WISVCH/connect.git</connection>
+        <developerConnection>scm:git:git@github.com:WISVCH/connect.git</developerConnection>
+        <url>https://github.com/WISVCH/connect</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <dependencyManagement>
         <dependencies>
