--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -2,24 +2,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>wisvch-connect-overlay</artifactId>
+        <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.2.2.0</version>
+        <version>1.2.2.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
-    <artifactId>wisvch-connect</artifactId>
+
+    <artifactId>wisvch-connect-overlay</artifactId>
     <packaging>war</packaging>
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>${java-version}</source>
-                    <target>${java-version}</target>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -35,6 +28,7 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <snapshots>
@@ -45,7 +39,13 @@
             <url>https://dl.bintray.com/wisvch/maven</url>
         </repository>
     </repositories>
+
     <dependencies>
+        <dependency>
+            <groupId>ch.wisv</groupId>
+            <artifactId>wisvch-connect-common</artifactId>
+            <version>1.2.2.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
             <artifactId>openid-connect-server-webapp</artifactId>
