--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>wisvch-connect-overlay</module>
         <module>wisvch-connect-common</module>
+        <module>wisvch-connect-client</module>
     </modules>
 
     <properties>
