--- a/wisvch-connect-common/pom.xml
+++ b/wisvch-connect-common/pom.xml
@@ -12,6 +12,23 @@
     <name>wisvch-connect-common</name>
     <description>WISVCH Connect Common</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.mitre</groupId>
