[maven-release-plugin] prepare for next development iteration

--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.2.2.3</version>
+        <version>1.2.2.4-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>ch.wisv</groupId>
             <artifactId>wisvch-connect-common</artifactId>
-            <version>1.2.2.3</version>
+            <version>1.2.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
