--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.2.2.4-SNAPSHOT</version>
+        <version>1.2.6.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -31,6 +31,7 @@
                             <filtering>true</filtering>
                             <includes>
                                 <include>**/*.tag</include>
+                                <include>**/*.jsp</include>
                             </includes>
                         </resource>
                         <resource>
@@ -38,6 +39,7 @@
                             <filtering>false</filtering>
                             <excludes>
                                 <exclude>**/*.tag</exclude>
+                                <exclude>**/*.jsp</exclude>
                             </excludes>
                         </resource>
                     </webResources>
@@ -66,7 +68,7 @@
         <dependency>
             <groupId>ch.wisv</groupId>
             <artifactId>wisvch-connect-common</artifactId>
-            <version>1.2.2.4-SNAPSHOT</version>
+            <version>1.2.6.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
