--- a/wisvch-connect-client/pom.xml
+++ b/wisvch-connect-client/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.2.6.0</version>
+        <version>1.2.6.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>ch.wisv</groupId>
             <artifactId>wisvch-connect-common</artifactId>
-            <version>1.2.6.0</version>
+            <version>1.2.6.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
