--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
 
     <build>
-        <finalName>wisvch-connect-${project.version}</finalName>
+        <finalName>connect</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
