--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -77,6 +77,10 @@
         </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
+            <artifactId>openid-connect-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mitre</groupId>
             <artifactId>openid-connect-common</artifactId>
         </dependency>
         <dependency>
