--- a/wisvch-connect-common/pom.xml
+++ b/wisvch-connect-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.2.6.3</version>
+        <version>1.2.6.4-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
