--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -2,14 +2,13 @@ server.issuer=http://localhost:8080/
 server.force_https=false
 
 crypto.keystore=classpath:keystore.jwks
-
-saml.entity_id=marksamltest
+saml.entity_id=entity
 saml.entity_baseurl=http://localhost:8080
-saml.idp_url=http://photon-01.chnet:8090/simplesaml/saml2/idp/metadata.php
-saml.idp_entity_id=http://photon-01.chnet:8090/simplesaml/saml2/idp/metadata.php
+saml.idp_url=http://localhost:8090/simplesaml/saml2/idp/metadata.php
+saml.idp_entity_id=http://localhost:8090/simplesaml/saml2/idp/metadata.php
 saml.keystore=classpath:samlKeystore.jks
 saml.keyname=apollo
 saml.keypass=nalle123
 
 dienst2.apitoken=CHANGEME
-dienst2.baseurl=https://frans.chnet/dienst2
+dienst2.baseurl=https://dienst.chnet
