--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <java-version>1.8</java-version>
-        <jackson.version>2.3.4</jackson.version>
+        <jackson.version>2.9.0.pr2</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -57,7 +57,7 @@
                 <artifactId>openid-connect-parent</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
-                <version>1.2.6</version>
+                <version>1.3.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
