--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -84,6 +84,10 @@
             <artifactId>openid-connect-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-ldap</artifactId>
         </dependency>
@@ -97,6 +101,11 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.6.1</version>
         </dependency>
         <dependency>
             <groupId>ch.wisv</groupId>
