Adjust family name in user info to include preposition
Fixes #19

--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -11,4 +11,4 @@ saml.keyname=apollo
 saml.keypass=nalle123
 
 dienst2.apitoken=CHANGEME
-dienst2.baseurl=https://dienst.chnet
+dienst2.baseurl=https://dienst2.chnet
