Add defaults for local testing

--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -1,4 +1,4 @@
-server.issuer=http://localhost:8080/
+server.issuer=http://localhost:8080
 server.force_https=false
 
 crypto.keystore=classpath:keystore.jwks
