--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>ch.wisv</groupId>
     <artifactId>wisvch-connect-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.1.3</version>
+    <version>1.3.1.4-SNAPSHOT</version>
     <name>wisvch-connect-parent</name>
 
     <modules>
@@ -47,7 +47,7 @@
         <connection>scm:git:https://github.com/WISVCH/connect.git</connection>
         <developerConnection>scm:git:git@github.com:WISVCH/connect.git</developerConnection>
         <url>https://github.com/WISVCH/connect</url>
-        <tag>v1.3.1.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
