--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>wisvch-connect-parent</artifactId>
         <groupId>ch.wisv</groupId>
-        <version>1.3.1.7</version>
+        <version>1.3.1.8-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>ch.wisv</groupId>
             <artifactId>wisvch-connect-common</artifactId>
-            <version>1.3.1.7</version>
+            <version>1.3.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.mitre</groupId>
