Upgrade to Spring Security 4.2.4

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
                 <scope>import</scope>
                 <version>1.3.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-bom</artifactId>
+                <version>4.2.4.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
