--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -23,6 +23,9 @@
                         <overlay>
                             <groupId>org.mitre</groupId>
                             <artifactId>openid-connect-server-webapp</artifactId>
+                            <excludes>
+                                <exclude>WEB-INF/lib/slf4j-log4j12-*.jar</exclude>
+                            </excludes>
                         </overlay>
                     </overlays>
                     <webResources>
@@ -105,7 +108,7 @@
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.6.1</version>
+            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>ch.wisv</groupId>
@@ -131,6 +134,22 @@
             <groupId>com.datadoghq</groupId>
             <artifactId>dd-trace-api</artifactId>
             <version>0.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-1.2-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
     </dependencies>
 </project>
