--- a/wisvch-connect-overlay/pom.xml
+++ b/wisvch-connect-overlay/pom.xml
@@ -133,7 +133,17 @@
         <dependency>
             <groupId>com.datadoghq</groupId>
             <artifactId>dd-trace-api</artifactId>
-            <version>0.10.0</version>
+            <version>0.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-api</artifactId>
+            <version>0.31.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-util</artifactId>
+            <version>0.31.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
