--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,4 +21,4 @@ jobs:
         tag_with_ref: true
         tag_with_sha: true
         add_git_labels: true
-        push: ${{ github.ref == 'refs/heads/master' }
+        push: ${{ github.ref == 'refs/heads/master' }}
