--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -8,5 +8,10 @@ saml.idp_entity_id=http://localhost:8090/simplesaml/saml2/idp/metadata.php
 saml.keystore=classpath:samlKeystore.jks
 saml.keyname=apollo
 saml.keypass=nalle123
+
+saml2.idp_url=https://accounts.google.com/o/saml2/idp?idpid=[IDP_ID]
+saml2.idp_entity_id=https://accounts.google.com/o/saml2?idpid=[IDP_ID]
+saml2.idp_metadata=classpath:/GoogleIDPMetadata.xml
+
 dienst2.apitoken=CHANGEME
 dienst2.baseurl=https://dienst2.chnet
