--- a/config/application-example.properties
+++ b/config/application-example.properties
@@ -11,7 +11,7 @@ saml.keypass=nalle123
 
 saml2.idp_url=https://accounts.google.com/o/saml2/idp?idpid=[IDP_ID]
 saml2.idp_entity_id=https://accounts.google.com/o/saml2?idpid=[IDP_ID]
-saml2.idp_metadata=classpath:/GoogleIDPMetadata.xml
+saml2.idp_metadata=classpath:/FileIDPMetadata.xml
 
 dienst2.apitoken=CHANGEME
 dienst2.baseurl=https://dienst2.chnet
